    Sites with custom templates should check their templates for any
    instance of a variable interpolation ([% variable %]) and ensure that
    the HTML filter is applied ([% variable FILTER html %] instead).

    Update the generated HTML version of the mod_webkdc manual to include
    the new directives introduced in WebAuth 4.1.0.

WebAuth 4.1.0 (2012-03-15)

    Add new mod_webkdc configuration option WebKdcUserInfoTimeout, which
    sets the network timeout used for user information service queries and
    multifactor authentications.  The default timeout is 30 seconds.
    Timeout support requires compiling with remctl 3.1 or later.

    Add new mod_webkdc configuration option WebKdcUserInfoIgnoreFail,
    which if set tells mod_webkdc to not fail the login if a user
    information service is configured but cannot be queried (either due to
    timeout or due to some other error).  By default, all logins will be
    rejected if a user information service is configured but returns an
    error.  If this option is set, the login can proceed, but only a
    password factor will be available and no level of assurance can be
    set.  Be aware that setting this option may allow bypassing a
    multifactor requirement expressed by the user information service
    rather than the destination site.

    Really fix compilation without remctl libraries.  The previous change
    would always define HAVE_REMCTL even if the libraries weren't found.

    If the remctl_set_ccache function is available, use it instead of
    setenv of KRB5CCNAME to set the ticket cache location when making user
    information service calls.  This at least only affects thread state
    instead of global process state and doesn't leak memory.

    Fix error handling in WebLogin when the password field on the login
    form is left blank.  The correct error is now returned, leaving the
    user at the login page, rather than giving the user a generic error