@@ -1,11 +1,16 @@
 # Shell function library for test cases.
 #
+# Note that while many of the functions in this library could benefit from
+# using "local" to avoid possibly hammering global variables, Solaris /bin/sh
+# doesn't support local and this library aspires to be portable to Solaris
+# Bourne shell.  Instead, all private variables are prefixed with "tap_".
+#
 # This file provides a TAP-compatible shell function library useful for
 # writing test cases.  It is part of C TAP Harness, which can be found at
 # <http://www.eyrie.org/~eagle/software/c-tap-harness/>.
 #
 # Written by Russ Allbery <rra@stanford.edu>
-# Copyright 2009, 2010, 2011 Russ Allbery <rra@stanford.edu>
+# Copyright 2009, 2010, 2011, 2012 Russ Allbery <rra@stanford.edu>
 # Copyright 2006, 2007, 2008
 #     The Board of Trustees of the Leland Stanford Junior University
 #
@@ -46,33 +51,34 @@ plan_lazy () {
 
 # Report the test status on exit.
 finish () {
-    local highest looks
-    highest=`expr "$count" - 1`
+    tap_highest=`expr "$count" - 1`
     if [ "$planned" = 0 ] ; then
-        echo "1..$highest"
-        planned="$highest"
+        echo "1..$tap_highest"
+        planned="$tap_highest"
     fi
-    looks='# Looks like you'
+    tap_looks='# Looks like you'
     if [ "$planned" -gt 0 ] ; then
-        if [ "$planned" -gt "$highest" ] ; then
+        if [ "$planned" -gt "$tap_highest" ] ; then
             if [ "$planned" -gt 1 ] ; then
-                echo "$looks planned $planned tests but only ran $highest"
+                echo "$tap_looks planned $planned tests but only ran" \
+                    "$tap_highest"
             else
-                echo "$looks planned $planned test but only ran $highest"
+                echo "$tap_looks planned $planned test but only ran" \
+                    "$tap_highest"
             fi
-        elif [ "$planned" -lt "$highest" ] ; then
+        elif [ "$planned" -lt "$tap_highest" ] ; then
             local extra
-            extra=`expr "$highest" - "$planned"`
+            extra=`expr "$tap_highest" - "$planned"`
             if [ "$planned" -gt 1 ] ; then
-                echo "$looks planned $planned tests but ran $extra extra"
+                echo "$tap_looks planned $planned tests but ran $extra extra"
             else
-                echo "$looks planned $planned test but ran $extra extra"
+                echo "$tap_looks planned $planned test but ran $extra extra"
             fi
         elif [ "$failed" -gt 0 ] ; then
             if [ "$failed" -gt 1 ] ; then
-                echo "$looks failed $failed tests of $planned"
+                echo "$tap_looks failed $failed tests of $planned"
             else
-                echo "$looks failed $failed test of $planned"
+                echo "$tap_looks failed $failed test of $planned"
             fi
         elif [ "$planned" -gt 1 ] ; then
             echo "# All $planned tests successful or skipped"
@@ -84,10 +90,9 @@ finish () {
 
 # Skip the entire test suite.  Should be run instead of plan.
 skip_all () {
-    local desc
-    desc="$1"
-    if [ -n "$desc" ] ; then
-        echo "1..0 # skip $desc"
+    tap_desc="$1"
+    if [ -n "$tap_desc" ] ; then
+        echo "1..0 # skip $tap_desc"
     else
         echo "1..0 # skip"
     fi
@@ -98,16 +103,15 @@ skip_all () {
 # command is successful, false otherwise.  The count starts at 1 and is
 # updated each time ok is printed.
 ok () {
-    local desc
-    desc="$1"
-    if [ -n "$desc" ] ; then
-        desc=" - $desc"
+    tap_desc="$1"
+    if [ -n "$tap_desc" ] ; then
+        tap_desc=" - $tap_desc"
     fi
     shift
     if "$@" ; then
-        echo ok $count$desc
+        echo ok "$count$tap_desc"
     else
-        echo not ok $count$desc
+        echo not ok "$count$tap_desc"
         failed=`expr $failed + 1`
     fi
     count=`expr $count + 1`
@@ -122,28 +126,24 @@ skip () {
 # Report the same status on a whole set of tests.  Takes the count of tests,
 # the description, and then the command to run to determine the status.
 ok_block () {
-    local end i desc
-    i=$count
-    end=`expr $count + $1`
+    tap_i=$count
+    tap_end=`expr $count + $1`
     shift
-    desc="$1"
-    shift
-    while [ "$i" -lt "$end" ] ; do
-        ok "$desc" "$@"
-        i=`expr $i + 1`
+    while [ "$tap_i" -lt "$tap_end" ] ; do
+        ok "$@"
+        tap_i=`expr $tap_i + 1`
     done
 }
 
 # Skip a whole set of tests.  Takes the count and then the reason for skipping
 # the test.
 skip_block () {
-    local i end
-    i=$count
-    end=`expr $count + $1`
+    tap_i=$count
+    tap_end=`expr $count + $1`
     shift
-    while [ "$i" -lt "$end" ] ; do
+    while [ "$tap_i" -lt "$tap_end" ] ; do
         skip "$@"
-        i=`expr $i + 1`
+        tap_i=`expr $tap_i + 1`
     done
 }
 
@@ -166,20 +166,21 @@ EOH
 # add strip_colon_error before the command to post-process its output.
 ok_program () {
     local desc w_status w_output output status
-    desc="$1"
+    tap_desc="$1"
     shift
-    w_status="$1"
+    tap_w_status="$1"
     shift
-    w_output="$1"
+    tap_w_output="$1"
     shift
-    output=`"$@" 2>&1`
-    status=$?
-    if [ $status = $w_status ] && [ x"$output" = x"$w_output" ] ; then
-        ok "$desc" true
+    tap_output=`"$@" 2>&1`
+    tap_status=$?
+    if [ $tap_status = $tap_w_status ] \
+        && [ x"$tap_output" = x"$tap_w_output" ] ; then
+        ok "$tap_desc" true
     else
-        echo "#  saw: ($status) $output"
-        echo "#  not: ($w_status) $w_output"
-        ok "$desc" false
+        echo "#  saw: ($tap_status) $tap_output"
+        echo "#  not: ($tap_w_status) $tap_w_output"
+        ok "$tap_desc" false
     fi
 }
 
@@ -189,12 +190,11 @@ ok_program () {
 # message.)  This is used to remove system-specific error messages (coming
 # from strerror, for example).
 strip_colon_error() {
-    local output status
-    output=`"$@" 2>&1`
-    status=$?
-    output=`puts "$output" | sed 's/^\([^ ]* [^:]*\):.*/\1/'`
-    puts "$output"
-    return $status
+    tap_output=`"$@" 2>&1`
+    tap_status=$?
+    tap_output=`puts "$tap_output" | sed 's/^\([^ ]* [^:]*\):.*/\1/'`
+    puts "$tap_output"
+    return $tap_status
 }
 
 # Bail out with an error message.
@@ -224,14 +224,13 @@ test_file_path () {
 # Create $BUILD/tmp for use by tests for storing temporary files and return
 # the path (via standard output).
 test_tmpdir () {
-    local tmpdir
     if [ -z "$BUILD" ] ; then
-        tmpdir="./tmp"
+        tap_tmpdir="./tmp"
     else
-        tmpdir="$BUILD"/tmp
+        tap_tmpdir="$BUILD"/tmp
     fi
-    if [ ! -d "$tmpdir" ] ; then
-        mkdir "$tmpdir" || bail "Error creating $tmpdir"
+    if [ ! -d "$tap_tmpdir" ] ; then
+        mkdir "$tap_tmpdir" || bail "Error creating $tap_tmpdir"
     fi
-    puts "$tmpdir"
+    puts "$tap_tmpdir"
 }
