@@ -29,6 +29,17 @@ WebAuth 4.1.1 (unreleased)
     Update the generated HTML version of the mod_webkdc manual to include
     the new directives introduced in WebAuth 4.1.0.
 
+    Update to rra-c-util 4.3:
+
+    * Update the set of flags enabled by make warnings.
+
+    Update to C TAP Harness 1.11:
+
+    * Only use feature-test macros when requested or built with gcc -ansi.
+    * New tests/tap/macros.h header with some common definitions.
+    * Drop is_double from the C TAP library to avoid requiring -lm.
+    * Avoid using local in the shell libtap.sh library.
+
 WebAuth 4.1.0 (2012-03-15)
 
     Add new mod_webkdc configuration option WebKdcUserInfoTimeout, which
